adjust jvmargs. fix compile warnings.
add MaxDirectMemorySize to jdk9 compatible build

it is unable to determine the amount of MaxDirectMemorySize running in a
travis docker environment. See https://pastebin.com/ECvQeHx0